[gd_scene load_steps=10 format=3 uid="uid://d1dowke5fsdap"]

[ext_resource type="FontFile" uid="uid://dej7qb7q5bxg5" path="res://assets/fonts/CooperHewitt-Medium.otf" id="1"]
[ext_resource type="Theme" uid="uid://0h6us4pe5qfi" path="res://assets/themes/global.tres" id="1_cv88s"]
[ext_resource type="Script" path="res://scenes/ui/title.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dp8vtge0lck8p" path="res://scenes/ui/load_game_dlg.tscn" id="3"]

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0.00612245, 0.995918)
colors = PackedColorArray(0, 0.34375, 0.335693, 1, 0, 0.042, 0.12, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")
width = 10
height = 600
fill_to = Vector2(0, 1)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/48/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/48/0 = Vector2(0, 0)

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cv88s")
script = ExtResource("2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("2")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 695.0
offset_bottom = 112.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_type_variation = &"title"
theme_override_fonts/font = SubResource("3")
text = "Save and Load Demo"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -424.0
offset_right = 637.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "This is a demonstration of saving game state in several situations.  These include:
- at the time of changing scenes
- saving dynamically instanced components
- capturing freed instanced child scenes
- the usual save/load from file"
autowrap_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -282.0
offset_top = -248.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NewGameBtn" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.921569, 0, 1, 1)
theme_override_colors/font_hover_color = Color(0.992157, 1, 0, 1)
theme_override_constants/h_separation = 10
theme_override_fonts/font = SubResource("5")
text = "New Game"
flat = true

[node name="LoadGameBtn" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.921569, 0, 1, 1)
theme_override_colors/font_hover_color = Color(0.992157, 1, 0, 1)
theme_override_constants/h_separation = 10
theme_override_fonts/font = SubResource("5")
text = "Load Game"
flat = true

[node name="ExitBtn" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.921569, 0, 1, 1)
theme_override_colors/font_hover_color = Color(0.992157, 1, 0, 1)
theme_override_constants/h_separation = 10
theme_override_fonts/font = SubResource("5")
text = "Exit"
flat = true

[node name="LoadGameDlg" parent="." instance=ExtResource("3")]

[connection signal="pressed" from="MarginContainer3/VBoxContainer/NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/LoadGameBtn" to="." method="_on_LoadGameBtn_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
